<resources>
    <string name="app_name">Calculator</string>
    <string name="C">C</string>
    <string name="btnPls">+</string>
    <string name="btnMin">-</string>
    <string name="btnMul">&#215;</string>
    <string name="btnDiv">&#247;</string>
    <string name="btnEql">=</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn10">0</string>
    <string name="btnDot">.</string>
</resources>
